feat: update credentials api
