# delta-sharing/common/src/handlers/credentials.rs
@@ -1,16 +1,22 @@
-use itertools::Itertools;
-
 use crate::api::{CredentialsHandler, RequestContext};
 use crate::models::credentials::v1::*;
 use crate::{Policy, ResourceStore, Result, SecuredAction};
 
 #[async_trait::async_trait]
 impl<T: ResourceStore + Policy> CredentialsHandler for T {
+    async fn list_credentials(
+        &self,
+        request: ListCredentialsRequest,
+        context: RequestContext,
+    ) -> Result<ListCredentialsResponse> {
+        self.check_required(&request, context.recipient()).await?;
+        todo!()
+    }
     async fn create_credential(
         &self,
         request: CreateCredentialRequest,
         context: RequestContext,
-    ) -> Result<Credential> {
+    ) -> Result<CredentialInfo> {
         self.check_required(&request, context.recipient()).await?;
         todo!()
     }
@@ -19,9 +25,18 @@ impl<T: ResourceStore + Policy> CredentialsHandler for T {
         &self,
         request: GetCredentialRequest,
         context: RequestContext,
-    ) -> Result<Credential> {
+    ) -> Result<CredentialInfo> {
         self.check_required(&request, context.recipient()).await?;
         self.get(&request.resource()).await?.0.try_into()
+    }
+
+    async fn update_credential(
+        &self,
+        request: UpdateCredentialRequest,
+        context: RequestContext,
+    ) -> Result<CredentialInfo> {
+        self.check_required(&request, context.recipient()).await?;
+        todo!()
     }
 
     async fn delete_credential(
